@startuml
hide circle
hide method
left to right direction

class Anagrafica {
  nome
  cognome
  denominazione
  luogoNascita
  dataNascita
  CodiceFiscale
  PartitaIVA
  comune
  indirizzo
  civico
  email
  pec
  telefono
}

class Gestore {
  scadenzaContratto
}

class Produttore {
  scadenzaContratto
}

class Prodotto {
  descrizione
}

Produttore "1" -- "n" Prodotto

Gestore "0..1" .. "1" Anagrafica
Produttore"0..1" .. "1" Anagrafica

class Negozio {
  comune
  indirizzo
  civico
}

class CategoriaMerceologica {
  categoria
}

class Modalita {
  modalita
}

class SpazioEspositivo {
  denominazione
  locale
  descrizione
  condizioni
  estensioneInMetri2
  costoGiornaliero
}

class NegozioCategoria {
}

Gestore "1" -- "n" Negozio : dispone >

Negozio "1" -- "n" SpazioEspositivo : concede >
Negozio "n" -- "n" CategoriaMerceologica
(Negozio, CategoriaMerceologica) .. NegozioCategoria

SpazioEspositivo "n" -- "1" Modalita : utilizzo >

class Calendario {
  nome
  organizzatore
  descrizione
}

class Evento {
  titolo
  descrizione
  inizio
  fine
  luogo
  stato
}

Evento "n" -- "1" Calendario : occupazione <

SpazioEspositivo "1" -- "n" Calendario

Evento "n" -- "1" Prodotto : esposizione
@enduml
